[package]
name = "streampager"
version = "0.10.3"
authors = ["Mark Juggurnauth-Thomas <markbt@efaref.net>"]
edition = "2018"
description = "streampager is a pager for command output or large files"
repository = "https://github.com/markbt/streampager"
readme = "README.md"
keywords = ["pager", "less", "more"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
build = "build.rs"
default-run = "sp"
include = ["src/**/*", "LICENSE.md", "README.md", "doc/sp.1.txt.tpl", "build.rs"]

[features]
default = ["keymap-file"]

# Should streampager be permitted to load user-defined keymap files.
keymap-file = ["pest", "pest_derive"]

[[bin]]
name = "sp"
path = "src/bin/sp/main.rs"

[[bin]]
name = "spp"
path = "src/bin/spp/main.rs"

[dependencies]
anyhow = "1.0.72"
bit-set = "0.5.3"
clap = { version = "2.34.0", features = ["wrap_help"] }
dirs = "3.0.2"
enum_dispatch = "0.3.12"
indexmap = "1.9.3"
lazy_static = "1.4.0"
lru = "0.7.8"
memmap2 = "0.5.10"
notify = "4.0.17"
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }
regex = "1.9.3"
scopeguard = "1.2.0"
serde = {version="1.0", features=["derive"]}
smallvec = "1.11.0"
tempfile = "3.7.1"
terminfo = "0.7"
termwiz = "0.18"
toml = "0.5.11"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.10"
vec_map = "0.8.2"
thiserror = "1.0.44"

[build-dependencies]
clap = "2.34.0"

[dev-dependencies]
pipe = "0.4.0"
